@@ -8,3 +8,11 @@ except:
     from Products.CMFCore.CMFCorePermissions import AddPortalContent
 
 ADD_CONTENT_PERMISSION = AddPortalContent
+
+try: 
+    # Plone 4 and higher 
+    import plone.app.upgrade 
+    USE_BBB_VALIDATORS = False 
+except ImportError: 
+    # BBB Plone 3 
+    USE_BBB_VALIDATORS = True
