@@ -1,4 +1,4 @@
 <?xml version="1.0" ?>
 <metadata>
- <version>1.0.1</version>
+ <version>1.0.2</version>
 </metadata>
