@@ -25,22 +25,18 @@
 
             <metal:fill fill-slot="widget_body" tal:define="value python:value or ''">
                 <input tal:attributes="name python:'a%s' % fieldName;
-                                       tabindex tabindex/next;
                                        value python:value[:3]" type="text" size="3" maxlength="3"
                          onchange="autoTab(this,0);" 
                         onKeyup="autoTab(this,0);">.
                 <input tal:attributes="name python:'a%s' % fieldName;
-                                       tabindex tabindex/next;
                                        value python:value[3:6]" type="text" size="3" maxlength="3"
                          onchange="autoTab(this,1);" 
                         onKeyup="autoTab(this,1);">.
                 <input tal:attributes="name python:'a%s' % fieldName;
-                                       tabindex tabindex/next;
                                        value python:value[6:9]" type="text" size="3" maxlength="3"
                          onchange="autoTab(this,2);" 
                         onKeyup="autoTab(this,2);">-
                 <input tal:attributes="name python:'a%s' % fieldName;
-                                       tabindex tabindex/next;
                                        value python:value[9:]" type="text" size="2" maxlength="2"
                          onchange="autoTab(this,3);" 
                         onKeyup="autoTab(this,3);">
